# DeepRecall

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
skill/: SKILL.md  __init__.py  deep_recall.py  memory_indexer.py  memory_scanner.py  provider_bridge.py
skill/patches/: call_llm.ts
tests/: test_deep_recall.py  test_memory_indexer.py  test_memory_scanner.py  test_provider_bridge.py
